--- a/cv.css
+++ b/cv.css
@@ -1,69 +1,128 @@
+*{
+    padding: 0px;
+    margin: 0px;
+}
+
 body {
-    background-color: rgb(245, 230, 252);
-    margin: 20px;
     font-family:'Poppins', sans-serif;
-    color:  rgb(99, 59, 107);
+    color:  rgb(95, 76, 99);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: rgb(241, 227, 240);
 }
 
 header {
-    background-color: rgb(99, 59, 107);
-    color: rgb(245, 230, 252);
+    width: 95%;
+    margin-top: 1%;
+    background-color: rgb(176, 142, 183);
+    color:rgb(252, 245, 251);
     text-align: center;
-    padding: 20px;
+    padding: 1%;
     display: flex;
     align-items: center;
     justify-content: space-between;
     
 }
+header div{
+    width: 40%;
+}
+
+header Img {
+    width: 90%;
+    border: 15px solid rgb(241, 227, 240);
+}
 
 header section {
+    width: 60%;
     display: flex;
     align-items: center;
     flex-direction: column;
     justify-content: center;
 }
 
-header Img {
-    width: 350px;
-    border: 20px double rgb(169, 144, 169);
+header section div{
+    width: 80%;
 }
 
 header h1 {
-    width: 800px;
     font-size: 40px;
-    text-align: center;
+    padding: 10%;
 }
 
-.fondoimagen {
+header h2 {
+    font-size: 25px;
+    padding: 5%;
+}
+/*.fondoimagen {
     background-image:url("https://images.unsplash.com/photo-1527842891421-42eec6e703ea?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=387&q=80");
     }
+*/
+
+article {
+    width: 97%;
+    display: flex;
+    flex-direction: row;
+}
+
+article div{
+    width: 43%;
+}
 
 .informacion {
-    background-color:rgb(169, 144, 169);
-    height: fit-content;
-    width: 370px;
-    color:  rgb(245, 230, 252);
-    padding: 15px 30px;
+    padding: 10%;
+    background-color:rgb(108, 78, 114);
+    color: rgb(241, 227, 240);
 }    
+
+.profile-description{
+    font-weight: 600;
+ }
+ 
+.educacion{
+    background-color:  rgb(176, 142, 183);
+    padding: 10%;
+    color: rgb(251, 246, 251);
+}
+
+.idiomas{
+    width: 50%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
 
 #texto-p {
     font-weight: 300 ;
 }
 
 .experiencia {
-    width: 720px;
-    padding: 20px;
+    width: 55%;
+    padding: 4%;
 }
 
-article {
-    display: flex;
-    flex-direction: row;
-    align-items: top center;
-    justify-content: space-between;
+section h2{
+    margin-bottom: 2%;
+    margin-top: 2%;
+    
 }
 
-.idiomas{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
+section h3{
+    margin-bottom: 2%;
+    margin-top: 2%;
+    margin-left: 2%;
+}
+
+section h4{
+    margin-bottom: 2%;
+    margin-top: 2%;
+    margin-left: 2%;
+}
+section p{
+    margin-left: 4%;
+    margin-top: 1%;
+}
+
+section a{
+    margin-left: 3%;
 }
